Add operation ids to improve method naming in generated files. Refactor.
